		  History of changes to photo-tools
		  =================================

* Version 0.6 (not yet released)

** New features

 + Issue #24: Add an overview window

** Bug fixes and minor changes

 + Issue #25: imageview should remember rotation.

 + Issue #22: Unwanted unicode marker for tags in the index

 + Add an optional attribute `name` to the items in the index.  Use
   it as the title of the imageview window if set.

* Version 0.5 (2016-08-22)

** New features

 + Issue #19: Manage a persistent selection

 + Issue #17: Speed up start of imageview when building in memory
   index for many files.

 + Issue #18: Add an image info window in imageview.

 + Do not throw an error in imageview if an image cannot be read,
   proceed to the next one instead.

** Internal changes

 + Do not change directory when reading the image directory.

* Version 0.4 (2016-04-12)

** New features

 + Issue #4: Add option to photoidx to add missing images to an
   index.

 + Issue #10: Allow setting of new tags from imageview.

 + Issue #11: imageview should be able to work without an index.

 + Issue #5: Allow a date interval as argument to --date.

 + Issue #12: Allow configuration of the type of checksum to be
   calculated.

** Incompatible changes

 + The index file format has changed.  photoidx.py and imageview.py
   are able to read the old format and convert the file silently to
   the new format when writing it back.  But the tools from earlier
   versions will not fully work with the new format files.

** Internal changes

 + Issue #1: Add a test suite.

 + Issue #3: Move from pyexiv2 to GExiv2.

** Bug fixes and minor changes

 + Issue #6: imageview crashes with ZeroDivisionError if no tags are
   set in the index.

 + Issue #13: imageview fails with RuntimeError if --directory option
   is used.

 + Issue #15: photoidx.py create raises KeyError if exiftags are not
   present in an image.

 + Issue #9: Sort the tags when writing the index to a file.
